fix: add base tag to index.html for github pages asset resolution

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="AI prompt generator, prompt engineering, ChatGPT prompts, AI optimizer, free AI tools" />
     <meta name="author" content="Prompt Generator" />
     <meta name="robots" content="index, follow" />
+    <base href="/Prompt-Generator/" />
     
     <!-- Google Fonts - Outfit for modern typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
